src/main/resources/org/example/sheikh_jackson_javaproject/assets/style.css
/* styles.css: */

/* GLOBAL */
.root {
    -fx-font-family: "Times New Roman";
}

/* TAB HEADER CENTERING */
.tab-header-area, .header-region {
    -fx-alignment: CENTER;
}

.tab-box {
    -fx-focus-color: transparent;
    -fx-faint-focus-color: transparent;
}

.tab-box:hover {
    -fx-background-color: black;
}

.tab-title {
    -fx-font-size: 16px;
    -fx-font-weight: bold;
    -fx-fill: white;
}

/* TAB COLORS */
.add-tab,
.delete-tab,
.stats-tab,
.update-tab,
.view-tab {
    -fx-font-size: 32px;
}

.add-tab, .add-btn {
    -fx-background-color: blue;
}

.delete-tab, .delete-btn {
    -fx-background-color: red;
}

.update-tab, .update-btn  {
    -fx-background-color: green;
}

.stats-tab {
    -fx-background-color: purple;
}

.view-tab {
    -fx-background-color: goldenrod;
}

/* FORM INPUTS */
.form-input {
    -fx-font-size: 18px;
    -fx-pref-height: 45px;
}

/* LABELS */
.form-lbl {
    -fx-font-size: 18px;
    -fx-font-weight: bold;
    -fx-text-fill: #333;
}

/* PRIMARY BUTTON */
.btn {
    -fx-cursor: hand;
    -fx-font-size: 22px;
    -fx-font-weight: bold;
    -fx-text-fill: white;
}

.add-btn:hover {
    -fx-background-color: darkblue;
}

.update-btn:hover {
    -fx-background-color: darkgreen;
}

.delete-btn:hover {
    -fx-background-color: maroon;
}

/* TABLE HEADER */
.table-header {
    -fx-background-color: #333;
    -fx-border-color: black;
    -fx-border-width: 0 0 2 0;
}

.table-header .label {
    -fx-text-fill: white;
    -fx-font-weight: bold;
}

/* TABLE ROW */
.table-row {
    -fx-border-color: #ddd;
    -fx-border-width: 0 0 1 0;
}

.table-row .id-lbl {
    -fx-font-weight: bold;
}

.table-lbl {
    -fx-font-size: 24px;
}

/* ALERT */
.alert {
    -fx-font-size: 18px;
}

.menu {
    -fx-font-size: 16px;
}

.side-note {
    -fx-font-size: 14px;
}

.credit-lbl {
    -fx-font-weight: bold;
}

.login-box {
    -fx-background-color: rgba(255,255,255,0.85);
    -fx-background-radius: 10;
}

.intro-bg {
    -fx-background-color: black;
}

.intro-logo{
    -fx-font-size: 90px;
    -fx-font-weight: bold;
    -fx-fill: white;
}

.connect-btn {
    -fx-background-color: rgba(83, 52, 52, 0.45);
}

.connect-btn:hover {
    -fx-background-color: rgba(83, 52, 52, 0.85);
}

